change DTO into records